[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/image/Line.png" type="Texture" id=1]
[ext_resource path="res://scenes/misc/Trail.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.254545 ), 0.0, 0.0, 0, 0, Vector2( 0.977778, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.156863 )

[node name="Line2D" type="Line2D"]
points = PoolVector2Array( 1.07854, -0.0867519, 5.0728, 8.00688, 11.4846, 16.3107, 21.4703, 24.4044, 30.2997, 28.7139, 38.8138, 29.7651, 49.8505, 30.8162, 62.6742, 30.9213, 73.0803, 27.5577, 80.7535, 25.035, 89.659, 23.1081, 95.9729, 20.8632, 109.583, 23.529, 115.616, 28.1592, 128.103, 46.1186, 134.417, 52.4324, 139.047, 56.9223, 142.836, 58.4657, 147.887, 58.4657 )
width = 6.0
width_curve = SubResource( 1 )
gradient = SubResource( 2 )
texture = ExtResource( 1 )
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.03

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
